# PyRayHF

./: .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  PyRAY.code-workspace  README.md  pyproject.toml
.github/workflows/: main.yml
PyRAY/: Test.ipynb  library.py
PyRAY.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
PyRAY/tests/: test_core.py
PyRayHF/: __init__.py  library.py
PyRayHF/tests/: test_core.py
docs/: Makefile  api.rst  citing.rst  conf.py  examples.rst  history.rst  index.rst  installation.rst  overview.rst  tutorials.rst
docs/examples/: Example_Generate_Input_Arrays.rst  Example_How_PyRAY_Works.rst  Example_Minimization.rst  Example_PyRayHF_Cartesian_Gradient.html  Example_PyRayHF_Cartesian_Gradient.rst  Example_PyRayHF_Cartesian_Snells.rst  Example_PyRayHF_Cartesian_Snells_Law.rst  Example_PyRayHF_Spherical_Gradient.html  Example_PyRayHF_Spherical_Gradient.rst  Example_PyRayHF_Spherical_Snells.rst  Example_PyRayHF_Spherical_Snells_Law.rst  Example_Run_Vertical_PyRAY.rst  Example_Run_Vertical_PyRayHF.rst  Example_Trace_Ray_Cartesian_Stratified.rst  Example_Trace_Ray_Snells_Law.rst  Example_Vertical_Forward_Operator.rst
docs/tutorials/: Example_Cartesian_Comparison.ipynb  Example_Generate_2D_Input.ipynb  Example_Generate_Input_Arrays.ipynb  Example_How_PyRAY_Works.ipynb  Example_How_PyRayHF_Works.ipynb  Example_How_PyRayHF_vertical_forward_operator_works.ipynb  Example_Input_Day.p  Example_Input_Night.p  Example_Minimization.ipynb  Example_PyRayHF_Cartesian_Gradient.ipynb  Example_PyRayHF_Cartesian_Gradient_PyIRI.ipynb  Example_PyRayHF_Cartesian_Snells.ipynb  MoJo_Data.p  (+21 more)
tests/: test_core.py
