[build-system]
requires = ["setuptools >= 38.6", "pip >= 10"]
build-backend = "setuptools.build_meta"

[project]
name = "PyRayHF"
version = "0.0.2"
description = "Python HF Raytracing for Ionosphere"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}

authors = [
    {name = "Victoriya Forsythe", email = "victoriya.v.makarevich.civ@us.navy.mil"},
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows"
]

keywords = [
  "ionosphere",
  "raytracing",
  "modelling"
]

dependencies = [
    "lmfit",
    "numpy",
    "PyIRI",
    "pytest"
]

[project.optional-dependencies]
test = [
  "coveralls",
  "flake8",
  "flake8-docstrings",
  "hacking >= 1.0",
  "pytest",
  "pytest-cov",
]

doc = [
  "extras_require",
  "ipython",
  "myst_parser",
  "numpydoc",
  "sphinx",
  "sphinx_rtd_theme"
]

[project.urls]
Documentation = "https://PyRayHF.readthedocs.io/en/latest/"
Source = "https://github.com/victoriyaforsythe/PyRayHF"